# copy2gmail

./: README.org  copy2gmail.cabal  shell.nix  stack.yaml
src/: Main.hs
