name:                copy2gmail
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/riaqn/copy2gmail#readme
license:             BSD3
license-file:        LICENSE
author:              Zesen Qian
maintainer:          haskell@riaqn.org
copyright:           GPL3
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable copy2gmail
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , imap
                     , connection
                     , transformers
                     , bytestring
                     , text
